Added bucketdeployment